# Advent-of-Code

./: .gitignore  Cargo.toml  LICENSE.md  README.md  alternative.md  alternative.py  build.gradle.kts  day01.py  gradle.properties  settings.gradle.kts
.cargo/: config.toml
day/: Cargo.toml
day/src/: day24.rs  lib.rs
gradle/: libs.versions.toml
inputs/: .gitignore  README.md
screenshots/: README.md
src/main/java/: Day01.java  Inputs.java
src/main/kotlin/: Day01.kt  Inputs.kt  Puzzle.kt
xtask/: Cargo.toml
xtask/src/: main.rs
